fix skills in show page

--- a/app/views/profiles/_general_profile.html.erb
+++ b/app/views/profiles/_general_profile.html.erb
@@ -99,7 +99,7 @@
   <div class="container">
     <div class="profileSection  p-3" id="skills">
       <h3 class="small"><small class="textGray">KEY SKILLS</small></h3>
-      <div class="flex justify-content-around skill-pills">
+      <div class="flex justify-content-start skill-pills">
         <% @profile.skill_list.each do |skill| %>
           <span class="skill-pill"><%= skill %></span>
         <% end %>
