--- a/app/views/profiles/_my_profile.html.erb
+++ b/app/views/profiles/_my_profile.html.erb
@@ -17,16 +17,9 @@
       <p class="textGray"><%= @profile.profession %>, <%= @profile.location %></p>
     </div>
     <div class="profileHeaderRight">
-      <div class="flex items-center justify-content-center mt-3">
+      <div class="flex items-center justify-content-end mt-3">
         <div class="stars">
-          <% @profile.average_rating.to_i.times do %>
-            <%= image_tag "icons/colored-rating.svg", alt: "rating" %>
-          <% end %>
-          <% (5 - @profile.average_rating.to_i).times do %>
-            <%= image_tag "icons/rating.svg", alt: "rating" %>
-          <% end %>
-          <span class="rating-size">(<%= @profile.ratings.size %>)</span>
-          <p class="textGray uppercase semi-bold text-center textSm"><%= @profile.expertise %> level</p>
+          <%= render partial: "ratings/content", locals: { profile: @profile } %>
         </div>
       </div>
     </div>
@@ -35,7 +28,7 @@
   <!-- Buttons -->
 
   <!-- Share button -->
-  <div class="profileButtons flex justify-content-around p-3 pt-0">
+  <div class="profileButtons flex justify-content-around p-3">
     <%= link_to "#", class: "btn-lg px-0 btn-primary share-link", data: { url: "https://www.flxibl.io/profiles/#{@profile.id}", title: "#{@profile.display_name}'s' profile on flxibl", text: @profile.overview.truncate(120) }  do %>
         <%= image_tag "icons/share-white.svg", alt: "Share profile" %>
         <p class="textWhite">SHARE</p>
@@ -55,8 +48,8 @@
   <!-- Skills -->
   <div class="container">
     <div class="profileSection  p-3" id="skills">
-      <h3 class="small"><small class="textGray">KEY SKILLS</small></h3>
-      <div class="flex justify-content-around skill-pills">
+      <h3 class="small mb-2 mt-0"><small class="textGray">KEY SKILLS</small></h3>
+      <div class="flex justify-content-start skill-pills mb-2">
         <% @profile.skill_list.each do |skill| %>
           <span class="skill-pill"><%= skill %></span>
         <% end %>
