--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -113,7 +113,7 @@
     </p>
     <div class="skills mt-4">
       <p class="subtitle mb-0">Key Skills</p>
-      <div class="skill-pills px-0">
+      <div class="skill-pills mb-3 px-0">
         <% @job.skill_list.each do |skill| %>
           <div class="skill-pill"><%= skill %></div>
         <% end %>
