--- a/app/views/ratings/_colored_star.html.erb
+++ b/app/views/ratings/_colored_star.html.erb
@@ -1,1 +1,1 @@
-<%= image_tag "icons/colored-rating.svg", alt: "rating" %>
+<%= image_tag "icons/colored-rating.svg", alt: "rating", class: "star" %>
