--- a/app/views/ratings/_content.html.erb
+++ b/app/views/ratings/_content.html.erb
@@ -1,10 +1,12 @@
-<% profile.average_rating.to_i.times do %>
-  <%= render partial: "ratings/colored_star" %>
-<% end %>
-<% (5 - profile.average_rating.to_i).times do %>
-  <%= render partial: "ratings/star" %>
-<% end %>
+<div class="flex items-center">
+  <% profile.average_rating.to_i.times do %>
+    <%= render partial: "ratings/colored_star" %>
+  <% end %>
+  <% (5 - profile.average_rating.to_i).times do %>
+    <%= render partial: "ratings/star" %>
+  <% end %>
 
-<span class="rating-size">(<%= profile.ratings.size %>)</span>
+  <span class="rating-size">(<%= profile.ratings.size %>)</span>
+</div>
 
 <p class="textGray uppercase semi-bold text-center textSm"><%= profile.expertise %> level</p>
