--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,6 +1,6 @@
 
 <section class="mx-3 mt-4 flex justify-content-between items-center">
-  <%= link_to :back do %>
+  <%= link_to profile_path(@profile) do %>
     <%= image_tag "icons/cross.svg", alt: "exit", class: "icon", height: 16, width: 16 %>
   <% end %>
   <p class="textDarkGray">NEW BOOKING</p>
