--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="mx-3 job-edit">
   <div class="flex justify-content-between items-center px-3">
-    <%= link_to :back do %>
+    <%= link_to job_path(@job) do %>
       <%= image_tag "icons/left-arrow.svg", alt: "back button", width: 16, height: 16 %>
     <% end %>
     <h3>Edit job</h3>
