--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,7 +1,7 @@
 <div class="bookings-index bg-blueish-gray">
   <div class="bg-white pb-2">
     <section class="px-3 pt-4 flex justify-content-between items-center">
-      <%= link_to :back do %>
+      <%= link_to dashboard_path do %>
         <%= image_tag "icons/left-arrow.svg", alt: "back", class: "icon", height: 16, width: 16 %>
       <% end %>
       <p class="textDarkGray">Bookings</p>
