--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,6 +1,6 @@
 <div class="jobs-index">
   <div class="flex justify-content-between items-center px-3">
-    <%= link_to :back do %>
+    <%= link_to dashboard_path do %>
       <%= image_tag "icons/left-arrow.svg", alt: "back button", width: 16, height: 16 %>
     <% end %>
     <h3>Job Posts</h3>
