--- a/app/views/bookings/index.js.erb
+++ b/app/views/bookings/index.js.erb
@@ -2,6 +2,7 @@
   const bookingCards = document.getElementById("booking-cards");
   const switches = document.querySelectorAll(".switch a");
   const filterContent = document.getElementById("filter-content");
+  const trigger = document.getElementById("filter-trigger");
 
   bookingCards.innerHTML = "<%= j render partial: "bookings/booking_cards", locals: { booking_group: @bookings, archived_bookings: current_user.manager? ? @archived_bookings : [] } %>";
 
@@ -17,6 +18,16 @@
 
   if (!filterContent.classList.contains("none")) {
     filterContent.classList.add("none");
+  }
+
+  if (trigger && <%= @filter_count.is_a?(Integer) ? @filter_count : 0 %> > 0) {
+    const template = `
+      <span class="skill-pill blue m-0 filter-count">
+        <%= @filter_count.to_s.rjust(2, "0") %>
+      </span>
+    `;
+
+    trigger.insertAdjacentHTML("beforeend", template);
   }
 
   window.moreTogglerMultiple(true);
