filter icon on jobs

--- a/app/assets/stylesheets/pages/_jobs_index.scss
+++ b/app/assets/stylesheets/pages/_jobs_index.scss
@@ -1,4 +1,8 @@
 .jobs-index {
+	#filter-trigger {
+		height: 46px;
+	}
+
 	#filter-content {
 		.head {
 			@extend .flex, .justify-content-between, .px-3, .mt-3;
