--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,9 +1,9 @@
 <div class="jobs-index">
-  <div class="flex justify-content-between items-center px-3">
+  <div class="flex justify-content-between items-center px-3 pt-4">
     <%= link_to dashboard_path do %>
       <%= image_tag "icons/left-arrow.svg", alt: "back button", width: 16, height: 16 %>
     <% end %>
-    <h3>Job Posts</h3>
+    <p class="textDarkGray uppercase">Job posts</p>
     <button id="filter-trigger" type="button">
       <%= image_tag "icons/filter.svg", alt: "filter", width: 16, height: 16 %>
     </button>
