--- a/app/views/jobs/index.js.erb
+++ b/app/views/jobs/index.js.erb
@@ -2,6 +2,7 @@
   const jobsSection = document.querySelector(".jobs");
   const switches = document.querySelectorAll(".switch a");
   const filterContent = document.getElementById("filter-content");
+  const trigger = document.getElementById("filter-trigger");
 
   jobsSection.innerHTML = "<%= j render partial: "jobs/job_cards", locals: { jobs: @jobs } %>";
 
@@ -17,6 +18,16 @@
 
   if (!filterContent.classList.contains("none")) {
     filterContent.classList.add("none");
+  }
+
+  if (trigger && <%= @filter_count.is_a?(Integer) ? @filter_count : 0 %> > 0) {
+    const template = `
+      <span class="skill-pill blue m-0 filter-count">
+        <%= @filter_count.to_s.rjust(2, "0") %>
+      </span>
+    `;
+
+    trigger.insertAdjacentHTML("beforeend", template);
   }
 
   window.moreTogglerMultiple(true);
