layout adjustments on profiles index to prevent overflowing of actions container out of the screen

--- a/app/assets/stylesheets/pages/_managers_index.scss
+++ b/app/assets/stylesheets/pages/_managers_index.scss
@@ -24,6 +24,15 @@
 			&:nth-child(odd) {
 				border-right: 1px solid#f4f6f9;
 			}
+
+      .actions {
+        width: 120px;
+      }
+
+      .action-link {
+        @extend .textSm;
+      }
+
 		}
 	}
 }
