--- a/app/views/pages/settings.html.erb
+++ b/app/views/pages/settings.html.erb
@@ -1,4 +1,4 @@
-<div id="settings-page">
+<div id="settings-page pt-4">
   <div class="flex justify-content-between items-center px-3">
     <%= link_to dashboard_path do %>
       <%= image_tag "icons/cross.svg", alt: "back button", width: 16, height: 16 %>
