--- a/app/views/managers/_card.html.erb
+++ b/app/views/managers/_card.html.erb
@@ -18,7 +18,7 @@
   </div>
   <div class="text-center">
     <h3 class="mt-0 mb-3 textMd"><%= manager.user.display_name %></h3>
-    <p class="bold uppercase textLightBlack my-0"><%= manager.job_title %></p>
+    <p class="semi-bold uppercase textLightBlack my-0"><%= manager.job_title %></p>
     <p class="textSm textLightBlack my-0"><%= manager.company.name %></p>
   </div>
   <% convo ||= current_user.conversation_with(manager.user) %>
