--- a/app/views/managers/_filter_content.html.erb
+++ b/app/views/managers/_filter_content.html.erb
@@ -11,6 +11,8 @@
                   wrapper_html: { class: "flex flex-column mb-3" } %>
       <%= f.input :job_title, required: false,
                   wrapper_html: { class: "flex flex-column mb-3" } %>
+      <%= f.input :company_name, required: false,
+                  wrapper_html: { class: "flex flex-column mb-3" } %>
 
       <div class="mt-5 mb-3 mx-3 px-3 flex justify-content-between">
         <button type="submit" name="manager[clear]" value="true" id="clear" class="btn btn-float red">Clear</button>
