--- a/app/views/bookings/_widget.html.erb
+++ b/app/views/bookings/_widget.html.erb
@@ -106,6 +106,13 @@
       </div>
     <% end %>
   </div>
+  <% if booking.accepted? && current_user.freelancer? %>
+    <%= link_to booking_redirect_path(booking), class: "btn btn-primary " do %>
+      <%= image_tag "icons/schedule-white", alt: "calendar", height: 24, width: 24, class: "pr-3" %>
+      Add to calendar
+    <% end %>
+  <% end %>
+
   <% if policy(booking).cancel? %>
     <%= link_to "Cancel", booking_cancel_path(booking), method: :patch, class: "btn btn-float red text-center" %>
   <% end %>
