--- a/app/views/bookings/_widget.html.erb
+++ b/app/views/bookings/_widget.html.erb
@@ -1,4 +1,4 @@
-<div class="booking-widget rounded shadow">
+<div class="booking-widget rounded shadow pb-3">
   <div class="flex justify-content-between items-center title <%= booking.status %>">
     <h3 class="m-0"><%= booking.title %></h3>
     <div class="flex items-center">
@@ -107,7 +107,7 @@
     <% end %>
   </div>
   <% if booking.accepted? && current_user.freelancer? %>
-    <%= link_to booking_redirect_path(booking), class: "btn btn-primary " do %>
+    <%= link_to booking_redirect_path(booking), class: "btn btn-primary m-3 " do %>
       <%= image_tag "icons/schedule-white", alt: "calendar", height: 24, width: 24, class: "pr-3" %>
       Add to calendar
     <% end %>
