Added id to widget

--- a/app/views/bookings/_widget.html.erb
+++ b/app/views/bookings/_widget.html.erb
@@ -1,4 +1,4 @@
-<div class="booking-widget rounded shadow">
+<div class="booking-widget rounded shadow" id="message-<%= message.id %>">
   <div class="flex justify-content-between items-center title <%= booking.status %>">
     <h3 class="m-0"><%= booking.title %></h3>
     <div class="flex items-center">
