--- a/app/views/messages/_messages.html.erb
+++ b/app/views/messages/_messages.html.erb
@@ -2,7 +2,7 @@
 
 <% messages.each do |message| %>
   <% if message.booking %>
-    <%= render partial: "bookings/widget", locals: { booking: message.booking, conversation: conversation, rate: rate } %>
+    <%= render partial: "bookings/widget", locals: { booking: message.booking, conversation: conversation, rate: rate, message: message } %>
   <% else %>
     <%= render partial: "messages/message", locals: { message: message, user_is_author: message.user == current_user } %>
   <% end %>
