js fix on create acc and buttons css adjustments

--- a/app/views/devise/invitations/edit.html.erb
+++ b/app/views/devise/invitations/edit.html.erb
@@ -38,7 +38,7 @@
       </div>
 
       <div>
-        <%= f.submit "Create account", class: "btn btn-primary w-100 py-3 textMd" %>
+        <%= f.submit "Create account", class: "btn btn-primary w-100 py-3 textMd height-unset" %>
         <div class="my-3 flex items-center justify-content-center">
           <div class="mr-3" style="width: 40px; border-top: 1px solid black"></div>
           <p class="m-0 textSm">OR</p>
