--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -78,7 +78,7 @@
       <%= f.input :billable, label_html: { class: "block textGray" }, as: :check_boxes, collection: [["", true ]], input_html:{class: "mb-2"}, wrapper_html: { class: "flex flex-row-reverse justify-content-end my-2" }, include_hidden: false %>
 
       <!-- Price section -->
-      <div id="priceSection" class="flex justify-content-between items-center flex-wrap <%= 'none' unless @booking.billable %> mb-2">
+      <div id="priceSection" class="flex justify-content-between items-center <%= 'none' unless @booking.billable %> mb-2">
         <%= f.input :price, label: false, placeholder: "Ex: $250", label_html: { class: "block textGray" }, input_html:{class: "w-100"}, wrapper_html: { class: "mr-2 flex-shrink-2" } %>
         <%= f.input :price_type, label: false, label_html: { class: "block textGray" }, collection: Booking::PRICE_TYPES, input_html:{class: "w-100"}, wrapper_html: { class: "mr-3" }  %>
         <p class="textGray my-0" id="totalPrice" data-preferred-currency="<%= currency_mapper(current_user.preferred_currency) %>"> Total: <%= currency_mapper(current_user.preferred_currency) %> 1,000</p>
