--- a/app/views/profiles/_general_profile.html.erb
+++ b/app/views/profiles/_general_profile.html.erb
@@ -98,7 +98,7 @@
   <!-- Skills -->
   <div class="container">
     <div class="profileSection p-3" id="skills">
-      <h3 class="small mb-2 mt-0"><small class="textGray">KEY SKILLS</small></h3>
+      <h3 class="small mb-2 mt-0 semi-bold"><small class="textGray">KEY SKILLS</small></h3>
       <div class="flex justify-content-start skill-pills mb-2">
         <% @profile.skill_list.each do |skill| %>
           <span class="skill-pill"><%= skill %></span>
