--- a/app/views/profiles/_notes_content.html.erb
+++ b/app/views/profiles/_notes_content.html.erb
@@ -1,8 +1,8 @@
 <div class="notesContainer mt-3">
   <% if user_signed_in? && current_user.manager? %>
-    <div class="bg-blueish-gray px-3">
-      <h3 class=""><small class="textGray">ONLY VISIBLE TO YOUR TEAM</small></h3>
-      <%= link_to "ADD A NOTE", "#note_content", class: "btn btn-note py-3"  %>
+    <div class="bg-blueish-gray px-3 pt-1">
+      <h3 class="textGray textBetween semi-bold">ONLY VISIBLE TO YOUR TEAM</h3>
+      <%= link_to "Write a Review", "#note_content", class: "btn btn-note py-3"  %>
 
       <% @notes.each do |note| %>
         <div class="flex p-3">
