--- a/app/views/profiles/_notes_content.html.erb
+++ b/app/views/profiles/_notes_content.html.erb
@@ -5,16 +5,19 @@
       <%= link_to "Write a Review", "#note_content", class: "btn btn-note py-3"  %>
 
       <% @notes.each do |note| %>
-        <div class="flex p-3">
-          <% if note.manager.user.avatar.attached? %>
-            <%= image_tag note.manager.user.avatar, alt: "alttext", class: "profileAvatar rounded-circle", height: 32, width: 32  %>
-          <% else %>
-              <%= image_tag "https://png.pngtree.com/png-clipart/20190520/original/pngtree-vector-users-icon-png-image_4144740.jpg", alt: "alttext", class: "profileAvatar rounded-circle", height: 32, width: 32 %>
-          <% end %>
-          <div class="noteCardBody ml-2">
-            <p class="ml-3 mt-0 mb-2"><strong><%= note.manager.user.display_name %></strong></p>
-            <p class="mt-0 ml-3 textGray"><%= note.content %></p>
+        <div class="flex justify-content-between p-3">
+          <div class="flex">
+            <% if note.manager.user.avatar.attached? %>
+              <%= image_tag note.manager.user.avatar, alt: "alttext", class: "profileAvatar rounded-circle", height: 32, width: 32  %>
+            <% else %>
+                <%= image_tag "https://png.pngtree.com/png-clipart/20190520/original/pngtree-vector-users-icon-png-image_4144740.jpg", alt: "alttext", class: "profileAvatar rounded-circle", height: 32, width: 32 %>
+            <% end %>
+            <div class="noteCardBody ml-2">
+              <p class="mt-0 mb-2"><strong><%= note.manager.user.display_name %></strong></p>
+              <p class="my-0 textGray"><%= note.content %></p>
+            </div>
           </div>
+          <span class="textSm textLightBlack semi-bold items-self-end"><%= note.created_at.strftime("%^b %-d") %></span>
         </div>
       <% end %>
 
