--- a/app/views/profiles/_notes_content.html.erb
+++ b/app/views/profiles/_notes_content.html.erb
@@ -39,7 +39,7 @@
 </div>
 
 <% if user_signed_in? && current_user.manager? %>
-  <div class="form-wrapper px-3">
+  <div class="form-wrapper px-3 pb-3">
     <p class="text-center uppercase mt-0 mb-3 textBetween">Star ratings are visible on Gauthiers profile</p>
     <div id="rating-form-container">
       <% if @my_rating %>
